--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../myHome/Kelly/assets/img/favicon.png" rel="icon">
-  <link href="../myHome/Kelly/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="Kelly/assets/img/favicon.png" rel="icon">
+  <link href="Kelly/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../myHome/Kelly/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../myHome/Kelly/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../myHome/Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../myHome/Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../myHome/Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="../myHome/Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="Kelly/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="Kelly/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../myHome/Kelly/assets/css/style.css" rel="stylesheet">
+  <link href="Kelly/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Kelly - v4.10.0
@@ -96,17 +96,17 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../myHome/Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/aos/aos.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="../myHome/Kelly/assets/vendor/php-email-form/validate.js"></script>
+  <script src="Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="Kelly/assets/vendor/aos/aos.js"></script>
+  <script src="Kelly/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="Kelly/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="Kelly/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="Kelly/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="Kelly/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="Kelly/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="../myHome/Kelly/assets/js/main.js"></script>
+  <script src="Kelly/assets/js/main.js"></script>
 
 </body>
 
